<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    tools:context=".activities.DrivingActivity">

    <Button
        android:id="@+id/btnForward"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="15dp"
        android:onClick="onClickButtonDrive"
        android:padding="30dp"
        android:text="@string/forward" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="45dp"
            android:gravity="center_horizontal"
            android:onClick="onClickButtonDrive"
            android:padding="30dp"
            android:text="@string/left" />

        <TextView
            android:id="@+id/tvFake"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_text_view"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="45dp"
            android:gravity="center_horizontal"
            android:onClick="onClickButtonDrive"
            android:padding="30dp"
            android:text="@string/right" />
    </LinearLayout>


    <Button
        android:id="@+id/btnBackward"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:onClick="onClickButtonDrive"
        android:padding="30dp"
        android:text="@string/backward" />
</LinearLayout>