<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:transitionGroup="true"
    tools:context=".activities.MainActivity">

    <LinearLayout
        android:id="@+id/llMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnEnableBT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickEnableBluetooth"
            android:text="@string/enable_bluetooth" />

        <Button
            android:id="@+id/btnDisableBT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickDisableBluetooth"
            android:text="@string/disable_bluetooth" />

        <Button
            android:id="@+id/btnScanBt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickScanDevices"
            android:text="@string/scan_devices"
            android:visibility="gone" />
    </LinearLayout>

    <ListView
        android:id="@+id/lvDevicesBT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/llMain"
        android:layout_centerHorizontal="true" />
</RelativeLayout>